[package]
authors = ["Silvia O'Dwyer <silviaodwyerdev@gmail.com>"]
categories = ["wasm", "multimedia"]
description = "High-performance image processing library for native use and the web"
license = "Apache-2.0"
name = "photon-rs"
readme = "./README.md"
repository = "https://github.com/silvia-odwyer/photon"
version = "0.3.1"
edition = "2018"
exclude = [
    "pkg/*",
    "examples/input_images/*"
]
homepage = "https://silvia-odwyer.github.io/photon/"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
palette="0.5.0"
rand="0.7.2"
imageproc = { version = "0.22.0", default-features = false }
rusttype="0.9.2"
base64="0.13.0"
time="0.2.23"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
perlin2d = "0.2.6"

[dev-dependencies]
time="0.2.1"
criterion = "0.3"

[[bench]]
name = "photon_benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[features]
default = []
rayon = ["image/jpeg_rayon", "imageproc/rayon"]
